Touch ups to the day hiding and fixing a modal overlay z-index issue.

--- a/tests/style.css
+++ b/tests/style.css
@@ -61,8 +61,11 @@ body {
 .day-date {
 	font-size: 24px;
 	background-color: white;
-	z-index: 5;
 	padding: 16px;
+	cursor: pointer;
+}
+.day-date:hover {
+	background-color: #f3f3f3;
 }
 .block {
 	display: flex;
@@ -170,11 +173,11 @@ body {
 	left: 0px;
 	width: 100%;
 	height: 100vh;
+	z-index: 20;
 	background-color: rgba(0, 0, 0, 0.5);
 	transition: opacity 300ms cubic-bezier(.25,.8,.25,1);
 }
 .modal-show {
-	z-index: 20;
 	opacity: 1;
 	pointer-events: all;
 }
